--- a/rxjs-app/src/index.css
+++ b/rxjs-app/src/index.css
@@ -1,3 +1,16 @@
+header {
+  margin-left: auto;
+  margin-right: auto;
+  width: 8em
+}
+
+p {
+  margin-left: auto;
+  margin-right: auto;
+  width: 8em
+
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
