--- a/rxjs-app/src/index.css
+++ b/rxjs-app/src/index.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 
 :root {
-  --img-height: 120px;
-  --img-width: 180px;
+  --img-height: 80px;
+  --img-width: 120px;
 }
 
 header {
@@ -13,11 +13,13 @@ header {
 
 p {
   text-align: center;
+  overflow: hidden;
 }
 
 .post {
   float: left;
-  margin: 0.5em;
+  margin: 0.1em;
+  padding: 0px;
   border-radius: 10px;
   background:#FFFFFF;
   box-shadow: 0 0 10px 3px #DDD;
@@ -32,7 +34,7 @@ p {
 
 body {
   background: #EEEEEE;
-  font-size: 14px;
+  font-size: 12px;
   font-family: 'Roboto' sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
