--- a/rxjs-app/src/index.css
+++ b/rxjs-app/src/index.css
@@ -16,6 +16,10 @@ p {
   overflow: hidden;
 }
 
+.inputContainer {
+  width: fit-content;
+}
+
 .post {
   float: left;
   margin: 0.1em;
@@ -34,19 +38,24 @@ p {
 
 .mInput {
   margin: 1em;
+  width: fit-content;
 }
 
 #trashBtn {
   font-size: 3em;
+  width: 100%;
 }
 
 body {
   background: #EEEEEE;
-  font-size: 12px;
+  font-size: 16px;
   font-family: 'Roboto' sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  
+}
+
+input {
+  font-size: 16px
 }
 
 code {
