--- a/rxjs-app/src/index.css
+++ b/rxjs-app/src/index.css
@@ -37,6 +37,7 @@ p {
 }
 
 .mInput {
+  font-size: 16px;
   margin: 1em;
   width: fit-content;
 }
@@ -48,7 +49,7 @@ p {
 
 body {
   background: #EEEEEE;
-  font-size: 16px;
+  font-size: 14px;
   font-family: 'Roboto' sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -66,4 +67,26 @@ code {
 @keyframes appear {
   0% {opacity: 0}
   100% {opacity: 1}
+}
+
+.loader {
+  margin: auto;
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
