--- a/rxjs-app/src/index.css
+++ b/rxjs-app/src/index.css
@@ -5,10 +5,8 @@
   --img-width: 120px;
 }
 
-header {
-  margin-left: auto;
-  margin-right: auto;
-  width: 8em
+h1 {
+  text-align: center;
 }
 
 p {
@@ -16,8 +14,17 @@ p {
   overflow: hidden;
 }
 
-.inputContainer {
+div.containers {
+  display: flex;
+}
+
+.mongoInputContainer {
   width: fit-content;
+  margin: 1em;
+}
+
+.apiInputContainer {
+  margin: 1em;
 }
 
 .post {
@@ -36,10 +43,12 @@ p {
   height: var(--img-height);
 }
 
-.mInput {
-  font-size: 16px;
+.baseUrlContainer {
   margin: 1em;
-  width: fit-content;
+}
+
+.inputGuide {
+  color: #AAA
 }
 
 #trashBtn {
@@ -47,9 +56,9 @@ p {
   width: 100%;
 }
 
-body {
+body{
   background: #EEEEEE;
-  font-size: 14px;
+  font-size: 16px;
   font-family: 'Roboto' sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
