--- a/rxjs-app/src/index.css
+++ b/rxjs-app/src/index.css
@@ -66,7 +66,7 @@ div.containers {
   width: 100%;
 }
 
-body{
+body, button{
   background: #EEEEEE;
   font-size: 16px;
   font-family: 'Roboto' sans-serif;
